chore: fix minor techdept